--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
   "version": "1.0.0",
   "private": "true",
   "scripts": {
-    "dev": "vite dev --host",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --ignore-path .eslintignore --write \"**/*.+(js|ts|json|html|svelte)\"",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts,.svelte .",
-    "docker": "docker compose up"
+    "docker": "docker compose up --build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.20.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@sveltejs/adapter-static": "^2.0.3",
+    "@sveltejs/kit": "^1.24.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-svelte": "^2.30.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^3.59.1",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "eslint-plugin-svelte": "^2.33.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.5.1",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
   },
-  "type": "module"
+  "engines": {
+    "node": "18.17.1"
+  }
 }
