--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,5 @@
   "printWidth": 100,
   "semi": true,
 
-  "plugins": ["prettier-plugin-svelte"],
-  "pluginSearchDirs": ["."],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
 }
